# pytest

./: .gitignore  path  pyproject.toml  pytest.ini  report.html  xml-report
logs/: pytest-logs.txt
src/math/: math.py
tests/: conftest.py  gen_data.py  math_test.py
