[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "math"
version = "0.0.1"
dependencies = ["pytest", "pytest-html", "pytest-timeout", "pytest-check"]

# [tool.pytest.ini_options]
# required_plugins = "pytest-html pytest-timeout"
# xfail_strict = "True"
# # https://docs.pytest.org/en/latest/how-to/logging.html#how-to-manage-logging
# log_file = "logs/pytest-logs.txt"
# log_file_level = "DEBUG"
# log_file_format = "%(asctime)s %(levelname)s %(module)s:%(lineno)s - %(funcName)s %(message)s"
# log_file_date_format = "%Y-%m-%d %H:%M:%S.%msec"
# log_auto_indent = "True"
# log_format = "%(asctime)s %(levelname)s %(module)s:%(lineno)s - %(funcName)s %(message)s"
# log_date_format = "%Y-%m-%d %H:%M:%S.%msec"
# log_level = "DEBUG"
# log_cli = "True"
# log_cli_format = "%(asctime)s %(levelname)s %(module)s:%(lineno)s - %(funcName)s %(message)s"
# log_cli_date_format = "%Y-%m-%d %H:%M:%S.%msec"
# log_cli_level = "DEBUG"

# generate_report_on_test = "True"
# minversion = "3.12"
# timeout_method = "threadtimeout = 1"
# additional file  logging
# format captured logs
# CLI logging during test run
# timeout settings for pytest-timeout plugin
# fail test cases taking longer
